# dpm-cli-example

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py
